--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -262,6 +262,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         if (!ktimer->tscdeadline)
                 return false;
         // 对应vmx的vmx_set_hv_timer, 设置vmx->hv_deadline_tsc
+        // 
         if (kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired))
                 return false;
         // 设定hv timer正在使用
@@ -284,7 +285,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
                 if (atomic_read(&ktimer->pending)) {
                         // 取消hv timer
                         cancel_hv_timer(apic);
-                // 
+                // 已经到期
                 } else if (expired) 
                         apic_timer_expired(apic, false);
                         // 取消hv timer
@@ -313,7 +314,6 @@ bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
 mwait指令透传给虚拟机, 或者能够post timer interrupt, 这个都不成立, 则表明能够使用hv timer
 
 2. 调用vmx的`vmx_set_hv_timer`, 设置`vmx->hv_deadline_tsc`
-
 
 ```cpp
 static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
@@ -357,7 +357,7 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
                 return -ERANGE;
         // 
         vmx->hv_deadline_tsc = tscl + delta_tsc;
-        // 
+        // tsc差是0, 表明已经过期
         *expired = !delta_tsc;
         return 0;
 }
@@ -365,13 +365,47 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
 
 其实就是设置`vmx->hv_deadline_tsc = tscl + delta_tsc;`
 
+3. 对于非周期性(即tscdeadline或one-shot), 取消hv timer, 
+
 ```cpp
 static void cancel_hv_timer(struct kvm_lapic *apic)
 {
         WARN_ON(preemptible());
         WARN_ON(!apic->lapic_timer.hv_timer_in_use);
+        // 
         kvm_x86_ops.cancel_hv_timer(apic->vcpu);
+        // hv timer设为不在用
         apic->lapic_timer.hv_timer_in_use = false;
+}
+```
+
+```cpp
+static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
+{
+        struct kvm_vcpu *vcpu = apic->vcpu;
+        struct kvm_timer *ktimer = &apic->lapic_timer;
+
+        if (atomic_read(&apic->lapic_timer.pending))
+                return;
+
+        if (apic_lvtt_tscdeadline(apic) || ktimer->hv_timer_in_use)
+                ktimer->expired_tscdeadline = ktimer->tscdeadline;
+
+        if (!from_timer_fn && vcpu->arch.apicv_active) {
+                WARN_ON(kvm_get_running_vcpu() != vcpu);
+                kvm_apic_inject_pending_timer_irqs(apic);
+                return;
+        }
+
+        if (kvm_use_posted_timer_interrupt(apic->vcpu)) {
+                if (apic->lapic_timer.timer_advance_ns)
+                        __kvm_wait_lapic_expire(vcpu);
+                kvm_apic_inject_pending_timer_irqs(apic);
+                return;
+        }
+
+        atomic_inc(&apic->lapic_timer.pending);
+        kvm_set_pending_timer(vcpu);
 }
 ```
 
