--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -262,7 +262,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
         if (!ktimer->tscdeadline)
                 return false;
         // 对应vmx的vmx_set_hv_timer, 设置vmx->hv_deadline_tsc
-        // 
+        // 设置失败, 直接返回false
         if (kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired))
                 return false;
         // 设定hv timer正在使用
@@ -365,17 +365,24 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
 
 其实就是设置`vmx->hv_deadline_tsc = tscl + delta_tsc;`
 
-3. 对于非周期性(即tscdeadline或one-shot), 取消hv timer, 
+3. 对于非周期性(即tscdeadline或one-shot), 如果已经有pending的, 则取消hv timer后返回; 如果已经到期, 
 
 ```cpp
 static void cancel_hv_timer(struct kvm_lapic *apic)
 {
         WARN_ON(preemptible());
         WARN_ON(!apic->lapic_timer.hv_timer_in_use);
-        // 
+        // 调用 vmx_cancel_hv_timer
         kvm_x86_ops.cancel_hv_timer(apic->vcpu);
         // hv timer设为不在用
         apic->lapic_timer.hv_timer_in_use = false;
+}
+```
+
+```cpp
+static void vmx_cancel_hv_timer(struct kvm_vcpu *vcpu)
+{
+        to_vmx(vcpu)->hv_deadline_tsc = -1;
 }
 ```
 
