--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -365,7 +365,7 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
 
 其实就是设置`vmx->hv_deadline_tsc = tscl + delta_tsc;`
 
-3. 对于非周期性(即tscdeadline或one-shot), 如果已经有pending的, 则取消hv timer后返回; 如果已经到期, 
+3. 对于非周期性(即tscdeadline或one-shot), 如果已经有pending的, 则取消hv timer后返回; 如果已经到期, 调用`apic_timer_expired()`再取消hv timer.
 
 ```cpp
 static void cancel_hv_timer(struct kvm_lapic *apic)
@@ -386,24 +386,28 @@ static void vmx_cancel_hv_timer(struct kvm_vcpu *vcpu)
 }
 ```
 
+4. 对于非周期性的, 已经到期了, 则调用`apic_timer_expired()`
+
 ```cpp
 static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
 {
         struct kvm_vcpu *vcpu = apic->vcpu;
         struct kvm_timer *ktimer = &apic->lapic_timer;
-
+        // 如果有pending, 返回
         if (atomic_read(&apic->lapic_timer.pending))
                 return;
-
+        // tscdeadline模式或者hv timer在使用
         if (apic_lvtt_tscdeadline(apic) || ktimer->hv_timer_in_use)
+                // 设置 expired_tscdeadline
                 ktimer->expired_tscdeadline = ktimer->tscdeadline;
-
+        // 不是从timer回调函数过来的 并且 apicv激活
         if (!from_timer_fn && vcpu->arch.apicv_active) {
                 WARN_ON(kvm_get_running_vcpu() != vcpu);
+                // 注入pending timer irq
                 kvm_apic_inject_pending_timer_irqs(apic);
                 return;
         }
-
+        // vcpu使用posted timer interrupt
         if (kvm_use_posted_timer_interrupt(apic->vcpu)) {
                 if (apic->lapic_timer.timer_advance_ns)
                         __kvm_wait_lapic_expire(vcpu);
