--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -68,6 +68,8 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
  |   |   |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
  |   |   |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置vmx->hv_deadline_tsc, 失败则直接返回false
+ |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
+ |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
  |   |   |   ├─ ktimer->hv_timer_in_use = true; // 设置apic timer的hv timer在使用
  |   |   |   ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
  |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
@@ -409,12 +411,14 @@ static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
         }
         // vcpu使用posted timer interrupt
         if (kvm_use_posted_timer_interrupt(apic->vcpu)) {
+                // 等它到期
                 if (apic->lapic_timer.timer_advance_ns)
                         __kvm_wait_lapic_expire(vcpu);
+                // 注入pending timer irq
                 kvm_apic_inject_pending_timer_irqs(apic);
                 return;
         }
-
+        // pending加1
         atomic_inc(&apic->lapic_timer.pending);
         kvm_set_pending_timer(vcpu);
 }
@@ -442,6 +446,63 @@ static void start_sw_timer(struct kvm_lapic *apic)
         else if (apic_lvtt_tscdeadline(apic))
                 start_sw_tscdeadline(apic);
         trace_kvm_hv_timer_state(apic->vcpu->vcpu_id, false);
+}
+```
+
+```cpp
+static void start_sw_period(struct kvm_lapic *apic)
+{
+        if (!apic->lapic_timer.period)
+                return;
+        // 当前时间晚于 target_expiration
+        if (ktime_after(ktime_get(),
+                        apic->lapic_timer.target_expiration)) {
+                apic_timer_expired(apic, false);
+
+                if (apic_lvtt_oneshot(apic))
+                        return;
+
+                advance_periodic_target_expiration(apic);
+        }
+        // 启用hrtimer, 
+        hrtimer_start(&apic->lapic_timer.timer,
+                apic->lapic_timer.target_expiration,
+                HRTIMER_MODE_ABS_HARD);
+}
+```
+
+```cpp
+static void start_sw_tscdeadline(struct kvm_lapic *apic)
+{
+        struct kvm_timer *ktimer = &apic->lapic_timer;
+        u64 guest_tsc, tscdeadline = ktimer->tscdeadline;
+        u64 ns = 0;
+        ktime_t expire;
+        struct kvm_vcpu *vcpu = apic->vcpu;
+        unsigned long this_tsc_khz = vcpu->arch.virtual_tsc_khz;
+        unsigned long flags;
+        ktime_t now;
+
+        if (unlikely(!tscdeadline || !this_tsc_khz))
+                return;
+
+        local_irq_save(flags);
+
+        now = ktime_get();
+        guest_tsc = kvm_read_l1_tsc(vcpu, rdtsc());
+
+        ns = (tscdeadline - guest_tsc) * 1000000ULL;
+        do_div(ns, this_tsc_khz);
+
+        if (likely(tscdeadline > guest_tsc) &&
+            likely(ns > apic->lapic_timer.timer_advance_ns)) {
+                expire = ktime_add_ns(now, ns);
+                expire = ktime_sub_ns(expire, ktimer->timer_advance_ns);
+                hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD);
+        } else
+                apic_timer_expired(apic, false);
+
+        local_irq_restore(flags);
 }
 ```
 
