--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -69,41 +69,19 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   |   ├─ !apic->lapic_timer->tscdeadline; return false// tscdeadline是0, 则直接返回false
  |   |   |   ├─ kvm_x86_ops.set_hv_timer(vcpu, ktimer->tscdeadline, &expired); // 设置vmx->hv_deadline_tsc, 失败则直接返回false
  |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
- |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
+ |   |   |   |   ├─ delta_tsc = max(guest_deadline_tsc, guest_tscl) - guest_tscl;// 虚拟机tscdeadline的tsc差值
+ |   |   |   |   ├─ vmx->hv_deadline_tsc = tscl + delta_tsc;// 设置hv_deadline_tsc
+ |   |   |   |   └─ *expired = !delta_tsc; // 是否到期
  |   |   |   ├─ ktimer->hv_timer_in_use = true; // 设置apic timer的hv timer在使用
  |   |   |   ├─ hrtimer_cancel(&ktimer->timer); // 取消hrtimer定时器
- |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
- |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
- |   |   |   ├─ kvm_can_use_hv_timer(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |   |   ├─ cancel_hv_timer(apic); // 非周期性且有timer pending, 取消hv timer
+ |   |   |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
+ |   |   |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
  |   |   └─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
  |   |       ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
  |   |       ├─ start_sw_period(); // 周期性或一次性模式, 调用
- |   |       └─ start_sw_tscdeadline(vcpu); // 不能使用hv timer, 则直接返回false
+ |   |       └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
 
-
-
- |   ├─ vcpu->arch.apic = apic;  // 
- |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
- |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer定时器
- |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // hrtimer定时器回调函数, 即APIC Timer设备产生中断的函数
- |   ├─ apic->lapic_timer.timer_advance_ns;  // advanced timer
- |   └─ kvm_iodevice_init(&apic->dev, &apic_mmio_ops);  // 
- ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
- |   ├─ kvm_lapic_reset(vcpu, init_event); // 设置寄存器的值为默认值
-
-handle_io()  // io vmexit入口
- ├─ dev->ops->write();     // pit设备的write调用
- |   ├─ pit_ioport_write();  // 写pit io入口
- |   |   ├─ struct kvm_pit *pit = dev_to_pit();  // 获取pit
- |   |   ├─ pit_load_count(); // 分配irq source id
- |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
- |   |   └─ create_pit_timer(); // 创建pit timer定时器
- |   |       ├─ s64 interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 计算间隔时间, 即定时器超时时间
- |   |       ├─ hrtimer_cancel(&ps->timer); // 取消pit定时器
- |   |       ├─ kthread_flush_work(&pit->expired); // 清理pit超时的work
- |   |       ├─ ps->period = interval; // 设置pit的超时时间
- |   |       ├─ ps->is_periodic = is_period; // 是否周期触发
- |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用pit的hrtimer定时器
 ```
 
 ## 4.2. 入口代码
@@ -287,7 +265,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
                 if (atomic_read(&ktimer->pending)) {
                         // 取消hv timer
                         cancel_hv_timer(apic);
-                // 已经到期
+                // 没有pending, 已经到期
                 } else if (expired) 
                         apic_timer_expired(apic, false);
                         // 取消hv timer
