--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -13,6 +13,8 @@
   - [4.4. restart_apic_timer(): 重启apic timer定时器](#44-restart_apic_timer-重启apic-timer定时器)
     - [4.4.1. start_hv_timer(): 使用hv timer](#441-start_hv_timer-使用hv-timer)
     - [start_sw_timer(): 使用sw timer](#start_sw_timer-使用sw-timer)
+    - [start_sw_period(): 周期性或一次性模式](#start_sw_period-周期性或一次性模式)
+    - [start_sw_tscdeadline(): tscdeadline模式](#start_sw_tscdeadline-tscdeadline模式)
 
 <!-- /code_chunk_output -->
 
@@ -427,6 +429,16 @@ static void start_sw_timer(struct kvm_lapic *apic)
 }
 ```
 
+如果hv timer在使用, 则取消;
+
+对于非周期性并且存在pending的, 直接返回;
+
+针对周期性或一次性的, 调用`start_sw_period()`;
+
+针对tscdeadline的, 调用`start_sw_tscdeadline()`;
+
+### start_sw_period(): 周期性或一次性模式
+
 ```cpp
 static void start_sw_period(struct kvm_lapic *apic)
 {
@@ -448,6 +460,8 @@ static void start_sw_period(struct kvm_lapic *apic)
                 HRTIMER_MODE_ABS_HARD);
 }
 ```
+
+### start_sw_tscdeadline(): tscdeadline模式
 
 ```cpp
 static void start_sw_tscdeadline(struct kvm_lapic *apic)
