--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -404,6 +404,143 @@ static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
 }
 ```
 
+```cpp
+static void kvm_apic_inject_pending_timer_irqs(struct kvm_lapic *apic)
+{
+        struct kvm_timer *ktimer = &apic->lapic_timer;
+
+        kvm_apic_local_deliver(apic, APIC_LVTT);
+        if (apic_lvtt_tscdeadline(apic)) {
+                ktimer->tscdeadline = 0;
+        } else if (apic_lvtt_oneshot(apic)) {
+                ktimer->tscdeadline = 0;
+                ktimer->target_expiration = 0;
+        }
+}
+```
+
+```cpp
+int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
+{
+        u32 reg = kvm_lapic_get_reg(apic, lvt_type);
+        int vector, mode, trig_mode;
+
+        if (kvm_apic_hw_enabled(apic) && !(reg & APIC_LVT_MASKED)) {
+                vector = reg & APIC_VECTOR_MASK;
+                mode = reg & APIC_MODE_MASK;
+                trig_mode = reg & APIC_LVT_LEVEL_TRIGGER;
+                return __apic_accept_irq(apic, mode, vector, 1, trig_mode,
+                                        NULL);
+        }
+        return 0;
+}
+```
+
+```cpp
+/*
+ * Add a pending IRQ into lapic.
+ * Return 1 if successfully added and 0 if discarded.
+ */
+static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
+                             int vector, int level, int trig_mode,
+                             struct dest_map *dest_map)
+{
+        int result = 0;
+        struct kvm_vcpu *vcpu = apic->vcpu;
+
+        trace_kvm_apic_accept_irq(vcpu->vcpu_id, delivery_mode,
+                                  trig_mode, vector);
+        switch (delivery_mode) {
+        case APIC_DM_LOWEST:
+                vcpu->arch.apic_arb_prio++;
+                /* fall through */
+        case APIC_DM_FIXED:
+                if (unlikely(trig_mode && !level))
+                        break;
+
+                /* FIXME add logic for vcpu on reset */
+                if (unlikely(!apic_enabled(apic)))
+                        break;
+
+                result = 1;
+
+                if (dest_map) {
+                        __set_bit(vcpu->vcpu_id, dest_map->map);
+                        dest_map->vectors[vcpu->vcpu_id] = vector;
+                }
+
+                if (apic_test_vector(vector, apic->regs + APIC_TMR) != !!trig_mode) {
+                        if (trig_mode)
+                                kvm_lapic_set_vector(vector,
+                                                     apic->regs + APIC_TMR);
+                        else
+                                kvm_lapic_clear_vector(vector,
+                                                       apic->regs + APIC_TMR);
+                }
+
+                if (kvm_x86_ops.deliver_posted_interrupt(vcpu, vector)) {
+                        kvm_lapic_set_irr(vector, apic);
+                        kvm_make_request(KVM_REQ_EVENT, vcpu);
+                        kvm_vcpu_kick(vcpu);
+                }
+                break;
+
+        case APIC_DM_REMRD:
+                result = 1;
+                vcpu->arch.pv.pv_unhalted = 1;
+                kvm_make_request(KVM_REQ_EVENT, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_SMI:
+                result = 1;
+                kvm_make_request(KVM_REQ_SMI, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_NMI:
+                result = 1;
+                kvm_inject_nmi(vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_INIT:
+                if (!trig_mode || level) {
+                        result = 1;
+                        /* assumes that there are only KVM_APIC_INIT/SIPI */
+                        apic->pending_events = (1UL << KVM_APIC_INIT);
+                        kvm_make_request(KVM_REQ_EVENT, vcpu);
+                        kvm_vcpu_kick(vcpu);
+                }
+                break;
+
+        case APIC_DM_STARTUP:
+                result = 1;
+                apic->sipi_vector = vector;
+                /* make sure sipi_vector is visible for the receiver */
+                smp_wmb();
+                set_bit(KVM_APIC_SIPI, &apic->pending_events);
+                kvm_make_request(KVM_REQ_EVENT, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_EXTINT:
+                /*
+                 * Should only be called by kvm_apic_local_deliver() with LVT0,
+                 * before NMI watchdog was enabled. Already handled by
+                 * kvm_apic_accept_pic_intr().
+                 */
+                break;
+
+        default:
+                printk(KERN_ERR "TODO: unsupported delivery mode %x\n",
+                       delivery_mode);
+                break;
+        }
+        return result;
+}
+```
+
 ### start_sw_timer(): 使用sw timer
 
 ```cpp
@@ -460,6 +597,8 @@ static void start_sw_period(struct kvm_lapic *apic)
                 HRTIMER_MODE_ABS_HARD);
 }
 ```
+
+如果当前时间晚于目标过期时间, 即已经过期的, 调用`apic_timer_expired()`
 
 ### start_sw_tscdeadline(): tscdeadline模式
 
