--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/8. LVT寄存器及ICR的交付模式和触发模式设置.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/8. LVT寄存器及ICR的交付模式和触发模式设置.md
@@ -3,32 +3,32 @@
 
 <!-- code_chunk_output -->
 
-- [delivery mode(交付模式)的设置](#delivery-mode交付模式的设置)
-  - [在LVT寄存器中](#在lvt寄存器中)
-  - [在ICR中](#在icr中)
-- [trigger模式(触发模式)的设置](#trigger模式触发模式的设置)
-  - [在LVT寄存器中](#在lvt寄存器中-1)
-  - [在ICR中](#在icr中-1)
+- [1. delivery mode(交付模式)的设置](#1-delivery-mode交付模式的设置)
+  - [1.1. 在LVT寄存器中](#11-在lvt寄存器中)
+  - [1.2. 在ICR中](#12-在icr中)
+- [2. trigger模式(触发模式)的设置](#2-trigger模式触发模式的设置)
+  - [2.1. 在LVT寄存器中](#21-在lvt寄存器中)
+  - [2.2. 在ICR中](#22-在icr中)
 
 <!-- /code_chunk_output -->
 
 在**power-up或reset**后，所有LVT寄存器初始化为00010000H，它们的mask位置位，指示**这些local interrupt都是屏蔽**的，**ICR并没有mask位，它的初始值为0**。
 
-# delivery mode(交付模式)的设置
+# 1. delivery mode(交付模式)的设置
 
-## 在LVT寄存器中
+## 1.1. 在LVT寄存器中
 
 ① **CMCI寄存器**、**Thrrmal monitor**寄存器和**Preformance monitor**寄存器只能使用**Fixed、SMI及NMI交付模式**。
 
 ② **LINT0和LINT1寄存器**只能使用**Fixed、ExtINT及NMI交付模式**。
 
-## 在ICR中
+## 1.2. 在ICR中
 
 **delivery mode**的使用依赖于**destination shorthand模式(发送IPI消息的目标类型**)，如下表所示。
 
 ![config](./images/40.png)
 
-# trigger模式(触发模式)的设置
+# 2. trigger模式(触发模式)的设置
 
 APIC定义的中断触发的时机有两种：**Edge triggered(边缘触发**） or **Level triggered（水平触发**）
 
@@ -81,7 +81,7 @@ PIW:          0          0          0          0   Posted-interrupt wakeup event
 
 在**LVT LINT0和LINT1寄存器**里可以由**用户设置**中断的**触发模式**，其他LVT寄存器使用**固定的触发模式**，依赖于**delivery mode**。
 
-## 在LVT寄存器中
+## 2.1. 在LVT寄存器中
 
 ① **Fixed模式**：LNT0和LINT1寄存器bit 15为0时使用edge触发，为1时使用level触发。
 
@@ -91,6 +91,6 @@ PIW:          0          0          0          0   Posted-interrupt wakeup event
 
 LVT **timer**和LVT **error**寄存器固定使用**edge触发模式**。
 
-## 在ICR中
+## 2.2. 在ICR中
 
 **只支持edge触发模式**，当设置为level触发时local APIC将忽略，使用edge触发模式代替。
