--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -410,10 +410,14 @@ static void kvm_apic_inject_pending_timer_irqs(struct kvm_lapic *apic)
         struct kvm_timer *ktimer = &apic->lapic_timer;
 
         kvm_apic_local_deliver(apic, APIC_LVTT);
+        // 
         if (apic_lvtt_tscdeadline(apic)) {
+                // tscdeadline 设为0
                 ktimer->tscdeadline = 0;
         } else if (apic_lvtt_oneshot(apic)) {
+                // tscdeadline 设为0
                 ktimer->tscdeadline = 0;
+                // 目标过期时间设为0
                 ktimer->target_expiration = 0;
         }
 }
@@ -422,12 +426,16 @@ static void kvm_apic_inject_pending_timer_irqs(struct kvm_lapic *apic)
 ```cpp
 int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
 {
+        // 获取lvt寄存器值, 这里是LVT timer寄存器
         u32 reg = kvm_lapic_get_reg(apic, lvt_type);
         int vector, mode, trig_mode;
 
         if (kvm_apic_hw_enabled(apic) && !(reg & APIC_LVT_MASKED)) {
+                // lvtt的vector
                 vector = reg & APIC_VECTOR_MASK;
+                // lvtt的mode
                 mode = reg & APIC_MODE_MASK;
+                // lvtt的trig_mode
                 trig_mode = reg & APIC_LVT_LEVEL_TRIGGER;
                 return __apic_accept_irq(apic, mode, vector, 1, trig_mode,
                                         NULL);
