--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -503,7 +503,16 @@ static void start_sw_period(struct kvm_lapic *apic)
 }
 ```
 
-如果当前时间晚于目标过期时间, 即已经过期的, 调用`apic_timer_expired()`
+如果当前时间晚于目标过期时间, 即**已经过期**的:
+
+1. 调用`apic_timer_expired()`进行中断注入?, 
+2. 如果是一次性的话, 那就此结束, 直接返回
+3. 否则(周期性)调用`advance_periodic_target_expiration()`设置周期性目标过期时间
+4. 启动hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`)
+
+如果没有过期, 则直接启动apic timer的hrtimer.
+
+apic timer的hrtimer实在lapic创建时候初始化的, 该hr timer的中断响应回调函数是`apic_timer_fn()`, 详细见`中断虚拟化`部分
 
 ### start_sw_tscdeadline(): tscdeadline模式
 
