--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -331,8 +331,9 @@ LAPIC是每个VCPU一个，由`kvm.vcpus[i].arch.apic`指向`kvm_lapic`结构体
 struct kvm_timer {
         // 对应的hrtimer定时器
         struct hrtimer timer;
-        // 触发周期
+        // 触发周期, 一次性和周期性使用
         s64 period;                             /* unit: ns */
+        // 周期性/一次性使用的目标过期时间
         ktime_t target_expiration;
         // 定时器模式, apic timer 有3种
         u32 timer_mode;
