--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -481,9 +481,12 @@ static void start_sw_timer(struct kvm_lapic *apic)
 
 ### start_sw_period(): 周期性或一次性模式
 
+使用`apic->lapic_timer.target_expiration`
+
 ```cpp
 static void start_sw_period(struct kvm_lapic *apic)
 {
+        // 周期为0, 直接返回
         if (!apic->lapic_timer.period)
                 return;
         // 当前时间晚于 target_expiration
@@ -505,16 +508,42 @@ static void start_sw_period(struct kvm_lapic *apic)
 
 如果当前时间晚于目标过期时间, 即**已经过期**的:
 
+1. 如果
 1. 调用`apic_timer_expired()`进行中断注入?, 
 2. 如果是一次性的话, 那就此结束, 直接返回
 3. 否则(周期性)调用`advance_periodic_target_expiration()`设置周期性目标过期时间
-4. 启动hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`)
+4. 启动hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 在
 
 如果没有过期, 则直接启动apic timer的hrtimer.
 
 apic timer的hrtimer实在lapic创建时候初始化的, 该hr timer的中断响应回调函数是`apic_timer_fn()`, 详细见`中断虚拟化`部分
 
+```cpp
+static void advance_periodic_target_expiration(struct kvm_lapic *apic)
+{
+        ktime_t now = ktime_get();
+        u64 tscl = rdtsc();
+        ktime_t delta;
+
+        /*
+         * Synchronize both deadlines to the same time source or
+         * differences in the periods (caused by differences in the
+         * underlying clocks or numerical approximation errors) will
+         * cause the two to drift apart over time as the errors
+         * accumulate.
+         */
+        apic->lapic_timer.target_expiration =
+                ktime_add_ns(apic->lapic_timer.target_expiration,
+                                apic->lapic_timer.period);
+        delta = ktime_sub(apic->lapic_timer.target_expiration, now);
+        apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) +
+                nsec_to_cycles(apic->vcpu, delta);
+}
+```
+
 ### start_sw_tscdeadline(): tscdeadline模式
+
+使用`apic->lapic_timer.tscdeadline`
 
 ```cpp
 static void start_sw_tscdeadline(struct kvm_lapic *apic)
@@ -538,11 +567,12 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
 
         ns = (tscdeadline - guest_tsc) * 1000000ULL;
         do_div(ns, this_tsc_khz);
-
+        // 
         if (likely(tscdeadline > guest_tsc) &&
             likely(ns > apic->lapic_timer.timer_advance_ns)) {
                 expire = ktime_add_ns(now, ns);
                 expire = ktime_sub_ns(expire, ktimer->timer_advance_ns);
+                // 启用hrtimer
                 hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD);
         } else
                 apic_timer_expired(apic, false);
