--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -82,6 +82,10 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   └─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
  |   |       ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
  |   |       ├─ start_sw_period(); // 周期性或一次性模式, 调用
+ |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
+ |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
+ |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
+ |   |   |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时
  |   |       └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
 
 ```
@@ -508,11 +512,11 @@ static void start_sw_period(struct kvm_lapic *apic)
 
 如果当前时间晚于目标过期时间, 即**已经过期**的:
 
-1. 如果
-1. 调用`apic_timer_expired()`进行中断注入?, 
-2. 如果是一次性的话, 那就此结束, 直接返回
-3. 否则(周期性)调用`advance_periodic_target_expiration()`设置周期性目标过期时间
-4. 启动hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 在
+1. 如果周期为0(一般是IMICT初始计数寄存器值), 表明停用oneshot或者周期性, 则直接返回
+2. 调用`apic_timer_expired()`进行中断注入?, 
+3. 如果是一次性的话, 那就此结束, 直接返回
+4. 否则(周期性)调用`advance_periodic_target_expiration()`设置周期性目标过期时间
+5. 启动hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 在
 
 如果没有过期, 则直接启动apic timer的hrtimer.
 
@@ -561,7 +565,7 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
                 return;
 
         local_irq_save(flags);
-
+        // 当前时间
         now = ktime_get();
         guest_tsc = kvm_read_l1_tsc(vcpu, rdtsc());
 
