--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -82,10 +82,10 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   └─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
  |   |       ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
  |   |       ├─ start_sw_period(); // 周期性或一次性模式, 调用
- |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
- |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
- |   |   |   |   ├─ guest_tscl = kvm_read_l1_tsc(vcpu, tscl);// 获取虚拟机tsc 
- |   |   |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时
+ |   |   |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
+ |   |   |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经过期并且是一次性模式, 则直接结束, 返回
+ |   |   |   |   ├─ advance_periodic_target_expiration();// 对于周期性的, 设置周期性目标超时时间 
+ |   |   |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时参数是target_expiration
  |   |       └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
 
 ```
@@ -517,10 +517,11 @@ static void start_sw_period(struct kvm_lapic *apic)
 3. 如果是一次性的话, 那就此结束, 直接返回
 4. 否则(周期性)调用`advance_periodic_target_expiration()`设置周期性目标过期时间
 5. 启动hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 在
-
-如果没有过期, 则直接启动apic timer的hrtimer.
+6. 如果没有过期, 则直接启动apic timer的hrtimer.
 
 apic timer的hrtimer实在lapic创建时候初始化的, 该hr timer的中断响应回调函数是`apic_timer_fn()`, 详细见`中断虚拟化`部分
+
+总结: 对于周期性的, 无论如何都会启用hrtimer; 对于一次性的, 已经过期的直接注入一次, 否则启用hrtimer
 
 ```cpp
 static void advance_periodic_target_expiration(struct kvm_lapic *apic)
