--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -546,6 +546,8 @@ static void advance_periodic_target_expiration(struct kvm_lapic *apic)
 }
 ```
 
+
+
 ### start_sw_tscdeadline(): tscdeadline模式
 
 使用`apic->lapic_timer.tscdeadline`
@@ -568,13 +570,15 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
         local_irq_save(flags);
         // 当前时间
         now = ktime_get();
+        // 虚拟机tsc值
         guest_tsc = kvm_read_l1_tsc(vcpu, rdtsc());
-
+        // 
         ns = (tscdeadline - guest_tsc) * 1000000ULL;
         do_div(ns, this_tsc_khz);
         // 
         if (likely(tscdeadline > guest_tsc) &&
             likely(ns > apic->lapic_timer.timer_advance_ns)) {
+                // tscdeadline的到期时间
                 expire = ktime_add_ns(now, ns);
                 expire = ktime_sub_ns(expire, ktimer->timer_advance_ns);
                 // 启用hrtimer
