--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -87,6 +87,11 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   |   |   ├─ advance_periodic_target_expiration();// 对于周期性的, 设置周期性目标超时时间 
  |   |   |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时参数是target_expiration
  |   |       └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
+ |   |   |   |   ├─ tscdeadline = ktimer->tscdeadline; // 获取apic timer的tscdeadline值
+ |   |   |   |   ├─ ns = (tscdeadline - guest_tsc) * 1000000ULL; // 根据vcpu tsc频率得到差值的ns单位值
+ |   |   |   |   ├─ do_div(ns, this_tsc_khz); // 根据vcpu的tsc计数频率计算差
+ |   |   |   |   ├─ tscdeadline = ktimer->tscdeadline;; // 获取apic timer的tscdeadline值
+ |   |   |   |   ├─ tscdeadline = ktimer->tscdeadline;; // 获取apic timer的tscdeadline值
 
 ```
 
@@ -572,18 +577,22 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
         now = ktime_get();
         // 虚拟机tsc值
         guest_tsc = kvm_read_l1_tsc(vcpu, rdtsc());
-        // 
+        // 目标tscdeadline与虚拟机tsc差值
         ns = (tscdeadline - guest_tsc) * 1000000ULL;
+        // 根据vcpu tsc计数频率得到差值的ns单位值
         do_div(ns, this_tsc_khz);
-        // 
+        // tscdeadline大于虚拟机当前tsc
+        // 并且差值大于advanced timer调整的时间
         if (likely(tscdeadline > guest_tsc) &&
             likely(ns > apic->lapic_timer.timer_advance_ns)) {
                 // tscdeadline的到期时间
                 expire = ktime_add_ns(now, ns);
+                // advanced timer进行的调整
                 expire = ktime_sub_ns(expire, ktimer->timer_advance_ns);
-                // 启用hrtimer
+                // 启用hrtimer, 超时时间是expire
                 hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD);
         } else
+                // 直接注入
                 apic_timer_expired(apic, false);
 
         local_irq_restore(flags);
