--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -15,6 +15,7 @@
     - [start_sw_timer(): 使用sw timer](#start_sw_timer-使用sw-timer)
     - [start_sw_period(): 周期性或一次性模式](#start_sw_period-周期性或一次性模式)
     - [start_sw_tscdeadline(): tscdeadline模式](#start_sw_tscdeadline-tscdeadline模式)
+    - [apic_timer_expired(): apic timer已经到期处理](#apic_timer_expired-apic-timer已经到期处理)
 
 <!-- /code_chunk_output -->
 
@@ -80,18 +81,18 @@ start_apic_timer()  // 启动apic timer定时器
  |   |   |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
  |   |   |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
  |   |   └─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
- |   |       ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
- |   |       ├─ start_sw_period(); // 周期性或一次性模式, 调用
+ |   |   |   ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消
+ |   |   |   ├─ start_sw_period(); // 周期性或一次性模式, 调用
  |   |   |   |   ├─ apic_timer_expired(); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
  |   |   |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经过期并且是一次性模式, 则直接结束, 返回
  |   |   |   |   ├─ advance_periodic_target_expiration();// 对于周期性的, 设置周期性目标超时时间 
  |   |   |   |   └─ hrtimer_start(lapic_timer.timer, apic->lapic_timer.target_expiration, HRTIMER_MODE_ABS_HARD); // 启用hrtimer, 超时参数是target_expiration
- |   |       └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
+ |   |   |   └─ start_sw_tscdeadline(vcpu); // tscdeadline模式, 调用
  |   |   |   |   ├─ tscdeadline = ktimer->tscdeadline; // 获取apic timer的tscdeadline值
  |   |   |   |   ├─ ns = (tscdeadline - guest_tsc) * 1000000ULL; // 根据vcpu tsc频率得到差值的ns单位值
  |   |   |   |   ├─ do_div(ns, this_tsc_khz); // 根据vcpu的tsc计数频率计算差
- |   |   |   |   ├─ tscdeadline = ktimer->tscdeadline;; // 获取apic timer的tscdeadline值
- |   |   |   |   ├─ tscdeadline = ktimer->tscdeadline;; // 获取apic timer的tscdeadline值
+ |   |   |   |   ├─ hrtimer_start(&ktimer->timer, expire, HRTIMER_MODE_ABS_HARD); // 当还没有到期并且差值大于advanced timer调整时间, 则启用hrtimer
+ |   |   |   |   └─ apic_timer_expired(apic, false); // 否则调用apic timer到期函数
 
 ```
 
@@ -377,83 +378,7 @@ static void vmx_cancel_hv_timer(struct kvm_vcpu *vcpu)
 }
 ```
 
-4. 对于非周期性的, 已经到期了, 则调用`apic_timer_expired()`
-
-```cpp
-static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
-{
-        struct kvm_vcpu *vcpu = apic->vcpu;
-        struct kvm_timer *ktimer = &apic->lapic_timer;
-        // 如果有pending, 返回
-        if (atomic_read(&apic->lapic_timer.pending))
-                return;
-        // tscdeadline模式或者hv timer在使用
-        if (apic_lvtt_tscdeadline(apic) || ktimer->hv_timer_in_use)
-                // 设置 expired_tscdeadline
-                ktimer->expired_tscdeadline = ktimer->tscdeadline;
-        // 不是从timer回调函数过来的 并且 apicv激活
-        if (!from_timer_fn && vcpu->arch.apicv_active) {
-                WARN_ON(kvm_get_running_vcpu() != vcpu);
-                // 注入pending timer irq
-                kvm_apic_inject_pending_timer_irqs(apic);
-                return;
-        }
-        // vcpu使用posted timer interrupt
-        if (kvm_use_posted_timer_interrupt(apic->vcpu)) {
-                // 等它到期
-                if (apic->lapic_timer.timer_advance_ns)
-                        __kvm_wait_lapic_expire(vcpu);
-                // 注入pending timer irq
-                kvm_apic_inject_pending_timer_irqs(apic);
-                return;
-        }
-        // pending加1
-        atomic_inc(&apic->lapic_timer.pending);
-        kvm_set_pending_timer(vcpu);
-}
-```
-
-```cpp
-static void kvm_apic_inject_pending_timer_irqs(struct kvm_lapic *apic)
-{
-        struct kvm_timer *ktimer = &apic->lapic_timer;
-
-        kvm_apic_local_deliver(apic, APIC_LVTT);
-        // 
-        if (apic_lvtt_tscdeadline(apic)) {
-                // tscdeadline 设为0
-                ktimer->tscdeadline = 0;
-        } else if (apic_lvtt_oneshot(apic)) {
-                // tscdeadline 设为0
-                ktimer->tscdeadline = 0;
-                // 目标过期时间设为0
-                ktimer->target_expiration = 0;
-        }
-}
-```
-
-```cpp
-int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
-{
-        // 获取lvt寄存器值, 这里是LVT timer寄存器
-        u32 reg = kvm_lapic_get_reg(apic, lvt_type);
-        int vector, mode, trig_mode;
-
-        if (kvm_apic_hw_enabled(apic) && !(reg & APIC_LVT_MASKED)) {
-                // lvtt的vector
-                vector = reg & APIC_VECTOR_MASK;
-                // lvtt的mode
-                mode = reg & APIC_MODE_MASK;
-                // lvtt的trig_mode
-                trig_mode = reg & APIC_LVT_LEVEL_TRIGGER;
-                return __apic_accept_irq(apic, mode, vector, 1, trig_mode,
-                                        NULL);
-        }
-        return 0;
-}
-```
-
-`kvm_apic_local_deliver()`用于传递中断到lapci相应功能单元，`__apic_accept_irq`函数在`中断虚拟化`有分析
+4. 对于非周期性的, 已经到期了, 则调用`apic_timer_expired()`, 见下面
 
 ### start_sw_timer(): 使用sw timer
 
@@ -598,6 +523,84 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
         local_irq_restore(flags);
 }
 ```
+
+### apic_timer_expired(): apic timer已经到期处理
+
+```cpp
+static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
+{
+        struct kvm_vcpu *vcpu = apic->vcpu;
+        struct kvm_timer *ktimer = &apic->lapic_timer;
+        // 如果有pending, 返回
+        if (atomic_read(&apic->lapic_timer.pending))
+                return;
+        // tscdeadline模式或者hv timer在使用
+        if (apic_lvtt_tscdeadline(apic) || ktimer->hv_timer_in_use)
+                // 设置 expired_tscdeadline
+                ktimer->expired_tscdeadline = ktimer->tscdeadline;
+        // 不是从timer回调函数过来的 并且 apicv激活
+        if (!from_timer_fn && vcpu->arch.apicv_active) {
+                WARN_ON(kvm_get_running_vcpu() != vcpu);
+                // 注入pending timer irq
+                kvm_apic_inject_pending_timer_irqs(apic);
+                return;
+        }
+        // vcpu使用posted timer interrupt
+        if (kvm_use_posted_timer_interrupt(apic->vcpu)) {
+                // 等它到期
+                if (apic->lapic_timer.timer_advance_ns)
+                        __kvm_wait_lapic_expire(vcpu);
+                // 注入pending timer irq
+                kvm_apic_inject_pending_timer_irqs(apic);
+                return;
+        }
+        // pending加1
+        atomic_inc(&apic->lapic_timer.pending);
+        kvm_set_pending_timer(vcpu);
+}
+```
+
+```cpp
+static void kvm_apic_inject_pending_timer_irqs(struct kvm_lapic *apic)
+{
+        struct kvm_timer *ktimer = &apic->lapic_timer;
+
+        kvm_apic_local_deliver(apic, APIC_LVTT);
+        // 
+        if (apic_lvtt_tscdeadline(apic)) {
+                // tscdeadline 设为0
+                ktimer->tscdeadline = 0;
+        } else if (apic_lvtt_oneshot(apic)) {
+                // tscdeadline 设为0
+                ktimer->tscdeadline = 0;
+                // 目标过期时间设为0
+                ktimer->target_expiration = 0;
+        }
+}
+```
+
+```cpp
+int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
+{
+        // 获取lvt寄存器值, 这里是LVT timer寄存器
+        u32 reg = kvm_lapic_get_reg(apic, lvt_type);
+        int vector, mode, trig_mode;
+
+        if (kvm_apic_hw_enabled(apic) && !(reg & APIC_LVT_MASKED)) {
+                // lvtt的vector
+                vector = reg & APIC_VECTOR_MASK;
+                // lvtt的mode
+                mode = reg & APIC_MODE_MASK;
+                // lvtt的trig_mode
+                trig_mode = reg & APIC_LVT_LEVEL_TRIGGER;
+                return __apic_accept_irq(apic, mode, vector, 1, trig_mode,
+                                        NULL);
+        }
+        return 0;
+}
+```
+
+`kvm_apic_local_deliver()`用于传递中断到lapci相应功能单元，`__apic_accept_irq`函数在`中断虚拟化`有分析
 
 
 
