--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -21,6 +21,8 @@
 
 # 1. APIC timer中断
 
+![2020-05-26-09-28-21.png](./images/2020-05-26-09-28-21.png)
+
 前面提到, APIC Timer的APIC定时器有3种定时器模式
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
