--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -993,8 +993,9 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
  |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
  |	|   ├─ vcpu_enter_guest()                	// 物理CPU进入guest模式
- |	|	|   ├─ kvm_check_requests()  			// 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
+ |	|	|   ├─ kvm_request_pending(); // 进入Guest模式前先处理相关挂起的请求(vcpu->requests), 每个有相应处理
  |	|	|   ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
+ |	|	|   |   ├─ ++vcpu->stat.req_event;      // 
  |	|	|   |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi等
  |	|	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
  |	|	|   ├─ kvm_x86_ops.prepare_guest_switch(vcpu); // // 进入Guest前期准备，架构相关, 准备陷入到guest, 保存vmexit时加载的host状态
