--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1106,6 +1106,7 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 {
         // 根据irq获取重定向表的相应项
         union kvm_ioapic_redirect_entry *entry = &ioapic->redirtbl[irq];
+        // 下面根据entry构建lapic的irq
         struct kvm_lapic_irq irqe;
         int ret;
         // 1. 该entry设置了mask, 即被屏蔽
@@ -1138,6 +1139,7 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
                  * if rtc_irq_check_coalesced returns false).
                  */
                 BUG_ON(ioapic->rtc_status.pending_eoi != 0);
+                // 将消息传递给相应的vcpu
                 ret = kvm_irq_delivery_to_apic(ioapic->kvm, NULL, &irqe,
                                                &ioapic->rtc_status.dest_map);
                 ioapic->rtc_status.pending_eoi = (ret < 0 ? 0 : ret);
@@ -1178,7 +1180,7 @@ int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
         kvm_for_each_vcpu(i, vcpu, kvm) {
                 if (!kvm_apic_present(vcpu))
                         continue;
-
+                // 
                 if (!kvm_apic_match_dest(vcpu, src, irq->shorthand,
                                         irq->dest_id, irq->dest_mode))
                         continue;
