--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -145,7 +145,7 @@ type表示**该gsi的类型**, 取值可以是` KVM_IRQ_ROUTING_IRQCHIP`, `KVM_I
 
 set表示该gsi关联的中断触发方法（不同type的GSI会调用不同的set触发函数)，通过该方法把**IRQ传递给IO-APIC**；按照**芯片类型**实现路由项中的`set`接口，
 
-link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；hlist_node则是中断路由表哈希链表的节点，通过link将同一个gsi对应的中断路由项链接到map对应的gsi上。
+link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；`hlist_node`则是中断路由表哈希链表的节点，通过link将同一个gsi对应的中断路由项链接到map对应的gsi上。
 
 **每个该结构体**代表了一个**具体芯片**的`set()`方法的**实现**，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
@@ -394,7 +394,7 @@ struct kvm_lapic_irq {
 };
 ```
 
-kvm_lapic_irq结构体是中断经过**IOAPIC**的**PRT**格式化出来的中断消息，从IOAPIC发送给LAPIC。
+`kvm_lapic_irq`结构体是中断经过**IOAPIC**的**PRT**格式化出来的**中断消息**，从IOAPIC**发送给LAPIC**。
 
 LAPIC在GUEST运行之前会对IRR中的进行选举，找到最高优先级的中断，该中断会被记录在kvm_queued_interrupt结构体中并且pending成员设置为true；nr成员记录了该中断的中断向量号，soft说明是否是硬中断。如果该中断大于PPR，就进行注入。如果注入成功，在虚拟机退出的时候，将pending设置为false，这个结构体保存着kvm.vcpus[i].arch.interrupt中。如果注入不成功，会在再次进入虚拟机的时候再次进行注入。
 
