--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1117,7 +1117,7 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
             (entry->fields.trig_mode == IOAPIC_LEVEL_TRIG &&
             entry->fields.remote_irr))
                 return -1;
-
+        // 下面根据entry格式化了中断消息
         irqe.dest_id = entry->fields.dest_id;
         // 向量号
         irqe.vector = entry->fields.vector;
@@ -1176,11 +1176,11 @@ int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
         }
 
         memset(dest_vcpu_bitmap, 0, sizeof(dest_vcpu_bitmap));
-
+        // 遍历虚拟机每个vcpu
         kvm_for_each_vcpu(i, vcpu, kvm) {
                 if (!kvm_apic_present(vcpu))
                         continue;
-                // 
+                // 根据dest_id
                 if (!kvm_apic_match_dest(vcpu, src, irq->shorthand,
                                         irq->dest_id, irq->dest_mode))
                         continue;
@@ -1214,6 +1214,31 @@ int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
 
         return r;
 }
+
+bool kvm_apic_match_dest(struct kvm_vcpu *vcpu, struct kvm_lapic *source,
+                           int shorthand, unsigned int dest, int dest_mode)
+{
+        struct kvm_lapic *target = vcpu->arch.apic;
+        u32 mda = kvm_apic_mda(vcpu, dest, source, target);
+
+        ASSERT(target);
+        switch (shorthand) {
+        case APIC_DEST_NOSHORT:
+                if (dest_mode == APIC_DEST_PHYSICAL)
+                        return kvm_apic_match_physical_addr(target, mda);
+                else
+                        return kvm_apic_match_logical_addr(target, mda);
+        case APIC_DEST_SELF:
+                return target == source;
+        case APIC_DEST_ALLINC:
+                return true;
+        case APIC_DEST_ALLBUT:
+                return target != source;
+        default:
+                return false;
+        }
+}
+EXPORT_SYMBOL_GPL(kvm_apic_match_dest);
 
 int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
                      struct dest_map *dest_map)
