--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1243,6 +1243,7 @@ EXPORT_SYMBOL_GPL(kvm_apic_match_dest);
 int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
                      struct dest_map *dest_map)
 {
+        // 获取vcpu的lapic
         struct kvm_lapic *apic = vcpu->arch.apic;
 
         return __apic_accept_irq(apic, irq->delivery_mode, irq->vector,
@@ -1250,7 +1251,9 @@ int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
 }
 ```
 
-具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`，该函数中会根据**不同的传递模式**处理消息,大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
+具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`
+
+
 
 ```cpp
 /*
@@ -1297,6 +1300,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
                 if (kvm_x86_ops.deliver_posted_interrupt(vcpu, vector)) {
                         kvm_lapic_set_irr(vector, apic);
                         // 请求 KVM_REQ_EVENT 事件
+                        // 在下次vm-entry的时候会进行中断注入
                         kvm_make_request(KVM_REQ_EVENT, vcpu);
                         kvm_vcpu_kick(vcpu);
                 }
@@ -1357,6 +1361,8 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
         return result;
 }
 ```
+
+该函数中会根据**不同的传递模式**处理消息,大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
 
 ```cpp
 /*
