--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1253,7 +1253,9 @@ int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
 
 具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`
 
+## 6.5. LAPIC接收中断
 
+然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的`kvm_lapic`结构体中的相应位置。
 
 ```cpp
 /*
@@ -1269,6 +1271,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 
         trace_kvm_apic_accept_irq(vcpu->vcpu_id, delivery_mode,
                                   trig_mode, vector);
+        // APIC 投递模式, 表明是什么功能
         switch (delivery_mode) {
         case APIC_DM_LOWEST:
                 vcpu->arch.apic_arb_prio++;
@@ -1290,6 +1293,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 
                 if (apic_test_vector(vector, apic->regs + APIC_TMR) != !!trig_mode) {
                         if (trig_mode)
+                                // 中断触发，设置中断位，设置apic里面的寄存器变量，偏移地址APIC_TMR和Linux真实APIC控制器相同
                                 kvm_lapic_set_vector(vector,
                                                      apic->regs + APIC_TMR);
                         else
@@ -1362,7 +1366,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 }
 ```
 
-该函数中会根据**不同的传递模式**处理消息,大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
+该函数中会根据**不同的传递模式**处理消息, 大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
 
 ```cpp
 /*
@@ -1396,7 +1400,14 @@ static int vmx_deliver_posted_interrupt(struct kvm_vcpu *vcpu, int vector)
 
         return 0;
 }
+```
 
+
+这里主要是设置`vmx->pi_desc`中的位图即`struct pi_desc`中的**pir字段**，其是一个**32位的数组**，共**8项**。因此最大标记**256个中断**，**每个中断向量**对应一位。
+
+设置好后，请求`KVM_REQ_EVENT`事件，在**下次vm-entry**的时候会进行**中断注入**。
+
+```cpp
 static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
                                                      bool nested)
 {
@@ -1437,118 +1448,7 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 }
 ```
 
-这里主要是设置`vmx->pi_desc`中的位图即`struct pi_desc`中的**pir字段**，其是一个**32位的数组**，共**8项**。因此最大标记**256个中断**，**每个中断向量**对应一位。设置好后，请求`KVM_REQ_EVENT`事件，在**下次vm-entry**的时候会进行**中断注入**。
 
-## 6.5. LAPIC接收中断
-
-然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的`kvm_lapic`结构体中的相应位置。
-
-```cpp
-/*
- * Add a pending IRQ into lapic.
- * Return 1 if successfully added and 0 if discarded.
- */
-static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
-                             int vector, int level, int trig_mode,
-                             struct dest_map *dest_map)
-{
-        int result = 0;
-        struct kvm_vcpu *vcpu = apic->vcpu;
-
-        trace_kvm_apic_accept_irq(vcpu->vcpu_id, delivery_mode,
-                                  trig_mode, vector);
-        // APIC 投递模式, 表明是什么功能
-        switch (delivery_mode) {
-        case APIC_DM_LOWEST:
-                vcpu->arch.apic_arb_prio++;
-                /* fall through */
-        case APIC_DM_FIXED:
-                if (unlikely(trig_mode && !level))
-                        break;
-
-                /* FIXME add logic for vcpu on reset */
-                if (unlikely(!apic_enabled(apic)))
-                        break;
-
-                result = 1;
-
-                if (dest_map) {
-                        __set_bit(vcpu->vcpu_id, dest_map->map);
-                        dest_map->vectors[vcpu->vcpu_id] = vector;
-                }
-
-                if (apic_test_vector(vector, apic->regs + APIC_TMR) != !!trig_mode) {
-                        if (trig_mode)
-                                // 中断触发，设置中断位，设置apic里面的寄存器变量，偏移地址APIC_TMR和Linux真实APIC控制器相同
-                                kvm_lapic_set_vector(vector,
-                                                     apic->regs + APIC_TMR);
-                        else
-                                kvm_lapic_clear_vector(vector,
-                                                       apic->regs + APIC_TMR);
-                }
-
-                if (kvm_x86_ops.deliver_posted_interrupt(vcpu, vector)) {
-                        kvm_lapic_set_irr(vector, apic);
-                        kvm_make_request(KVM_REQ_EVENT, vcpu);
-                        kvm_vcpu_kick(vcpu);
-                }
-                break;
-
-        case APIC_DM_REMRD:
-                result = 1;
-                vcpu->arch.pv.pv_unhalted = 1;
-                kvm_make_request(KVM_REQ_EVENT, vcpu);
-                kvm_vcpu_kick(vcpu);
-                break;
-
-        case APIC_DM_SMI:
-                result = 1;
-                kvm_make_request(KVM_REQ_SMI, vcpu);
-                kvm_vcpu_kick(vcpu);
-                break;
-
-        case APIC_DM_NMI:
-                result = 1;
-                kvm_inject_nmi(vcpu);
-                kvm_vcpu_kick(vcpu);
-                break;
-
-        case APIC_DM_INIT:
-                if (!trig_mode || level) {
-                        result = 1;
-                        /* assumes that there are only KVM_APIC_INIT/SIPI */
-                        apic->pending_events = (1UL << KVM_APIC_INIT);
-                        kvm_make_request(KVM_REQ_EVENT, vcpu);
-                        kvm_vcpu_kick(vcpu);
-                }
-                break;
-
-        case APIC_DM_STARTUP:
-                result = 1;
-                apic->sipi_vector = vector;
-                /* make sure sipi_vector is visible for the receiver */
-                smp_wmb();
-                set_bit(KVM_APIC_SIPI, &apic->pending_events);
-                kvm_make_request(KVM_REQ_EVENT, vcpu);
-                kvm_vcpu_kick(vcpu);
-                break;
-
-        case APIC_DM_EXTINT:
-                /*
-                 * Should only be called by kvm_apic_local_deliver() with LVT0,
-                 * before NMI watchdog was enabled. Already handled by
-                 * kvm_apic_accept_pic_intr().
-                 */
-                break;
-
-        default:
-                printk(KERN_ERR "TODO: unsupported delivery mode %x\n",
-                       delivery_mode);
-                break;
-        }
-        return result;
-}
-```
 
 
 ## 6.6. MSI中断触发函数: kvm_set_msi
